# Pithos-Notebook

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
data/: com.pithos.notebook.desktop  com.pithos.notebook.metainfo.xml  typst_template.typ
pithos-core/: Cargo.toml
pithos-core/src/: crypto.rs  export.rs  lib.rs  notes.rs  search.rs  state.rs  templates.rs  vault.rs
pithos-gtk/: Cargo.toml
pithos-gtk/src/: actions.rs  app_dialogs.rs  editor.rs  main.rs  notes.rs  persistence.rs  preview.rs  sidebar_ops.rs  signals.rs  style.css
pithos-gtk/src/ui/: dialogs.rs  mod.rs  sidebar.rs  toolbar.rs  types.rs  window.rs
snap/: snapcraft.yaml
src/: actions.rs  app_dialogs.rs  crypto.rs  editor.rs  main.rs  notes.rs  persistence.rs  preview.rs  sidebar_ops.rs  signals.rs  state.rs  style.css  vault.rs
src/ui/: dialogs.rs  sidebar.rs  toolbar.rs  types.rs  window.rs
