[package]
name = "pithos-core"
version = "0.2.5"
edition = "2021"
description = "Core library for Pithos Notebook — vault, crypto, notes, search (no GUI)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
dirs = "5"
pulldown-cmark = "0.12"
zeroize = { version = "1", features = ["derive"] }
