[package]
name = "pithos-gtk"
version = "0.2.5"
edition = "2021"
description = "GTK4/Libadwaita frontend for Pithos Notebook"

[[bin]]
name = "pithos-notebook"
path = "src/main.rs"

[dependencies]
pithos-core = { path = "../pithos-core" }
gtk = { package = "gtk4", version = "0.10", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.8", features = ["v1_5"] }
sourceview5 = "0.10"
gdk-pixbuf = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
webkit6 = "0.5"

[package.metadata.deb]
maintainer = "iamcarrasco <carrascoamm@gmail.com>"
copyright = "2025 iamcarrasco"
license-file = ["../LICENSE", "0"]
depends = "libgtk-4-1 (>= 4.12), libadwaita-1-0 (>= 1.4), libgtksourceview-5-0 (>= 5.0), libgdk-pixbuf-2.0-0, libwebkitgtk-6.0-4, pandoc"
section = "utils"
priority = "optional"
assets = [
    ["target/release/pithos-notebook", "usr/bin/", "755"],
    ["../data/icons/hicolor/512x512/apps/com.pithos.notebook.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
    ["../data/com.pithos.notebook.desktop", "usr/share/applications/", "644"],
    ["../data/com.pithos.notebook.metainfo.xml", "usr/share/metainfo/", "644"],
    ["../README.md", "usr/share/doc/pithos-notebook/", "644"],
]
